<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="subscription_no_title">(No title)</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">SoundWaves</string>
    <string name="title_play_list">Episodes</string>
    <string name="title_player">Player</string>
    <string name="title_download_list">Downloading List</string>
    <string name="title_read_list">All Items</string>
    <string name="title_channels">Channels</string>
    <string name="title_episodes">Episodes</string>
    <string name="title_subs">Channels</string>
    <string name="title_pref">Settings</string>
    <string name="title_search_channel">Search Channel</string>
    <string name="title_backup">Backup Channels</string>
    <string name="button_opml_import">Import from OPML</string>
    <string name="button_opml_export">Export to OPML</string>
    <string name="channel_bar_button_add">Add</string>
    <string name="channel_bar_button_backup">Backup</string>
    <string name="channel_bar_button_manage">Manage</string>
    <string name="channel_bar_button_search">Search</string>
    <string name="episode_bar_button_all">All</string>
    <string name="episode_bar_button_download">Download</string>
    <string name="episode_bar_button_manage">Manage</string>
    <string name="episode_bar_button_play">Play</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_move_up">Move Up</string>
    <string name="menu_move_down">Move Down</string>
    <string name="menu_mark_new">Reset to Unplayed</string>
    <string name="menu_play">Play</string>
    <string name="menu_played_by">Played by</string>
    <string name="menu_add_to_playlist">Add To Playlist</string>
    <string name="menu_export_audio_file">Export audio file</string>
    <string name="menu_backup_channels">Backup Channels</string>
    <string name="menu_details">Details</string>
    <string name="menu_episodes">Episodes</string>
    <string name="menu_view">View</string>
    <string name="menu_view_channel">View Channel</string>
    <string name="menu_keep">Keep</string>
    <string name="menu_unkeep">Unkeep</string>
    <string name="menu_download">Download</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_back">Back</string>
    <string name="menu_ok">OK</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_update">Update</string>
    <string name="menu_manual_update">Manual Update</string>
    <string name="menu_add">Add</string>
    <string name="menu_display">Display</string>
    <string name="menu_select">Select Mode</string>
    <string name="menu_sort">Sort Mode</string>
    <string name="menu_repeat">Repeat Mode</string>
    <string name="menu_unsubscribe">Unsubscribe</string>
    <string name="menu_load_all">Load All</string>
    <string name="menu_load_by_channel">Load by Channel</string>
    <string name="menu_remove_all">Remove All</string>
    <string name="menu_share">Share</string>
    <string name="menu_auto_download">Auto Download</string>
    <string name="menu_manual_download">Manual Download</string>
    <string name="more_channel">More Channels... </string>
    <string name="menu_list_channels">List Channels</string>
    <string name="menu_search_channels">Search Channels</string>
    <string name="toast_added_to_playlist">Added to playlist</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="last_item_date">Last Item Time</string>
    <string name="update_date">Last Update Time</string>
    <string name="channel_title">Channel Info</string>
    <string name="auto_download">Auto Download</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="sdcard_unmout">SDCard not found.</string>
    <string name="audio_no_found">Audio File not found.</string>
    <string name="no_connect">Network not found.</string>
    <string name="download_hint">Placed in the download queue.</string>
    <string name="auto_download_hint">The new items in the channel will be automatically downloaded.</string>
    <string name="manual_download_hint">Auto Download disabled.</string>
    <string name="unsubscribe_channel">Do you want to unsubscribe the channel?</string>
    <string name="pref_only_wifi_description">Download file only when Wi-Fi connected</string>
    <string name="pref_only_wifi_title">Download only Wi-Fi</string>
    <string name="pref_dark_theme">Enable Dark Theme for higher contrast</string>
    <string name="pref_dark_theme_title">Dark Theme</string>
    <string name="pref_update_wifi_description">Set up automatic update interval time though Wi-Fi</string>
    <string name="pref_update_wifi_title">Update interval through Wi-Fi</string>
    <string name="pref_update_wifi_description">Download new episodes automatically when the feeds are refreshed</string>
    <string name="pref_download_on_update_title">Automatic download</string>
    <string name="pref_download_on_update_description">Set up automatic update interval time</string>
    
    <string name="pref_update_time_title">Update at</string>
    <string name="pref_update_time_description">In addition to periodic updating the feeds can be updated every night/morning at a given time</string>
    
    <string name="pref_update_mobile_title">Update interval though 3G</string>
    <string name="pref_item_expire_description">Setup the automatic expiration time of the undownload items</string>
    <string name="pref_item_expire_title">Undownload item expire in</string>
    <string name="pref_downloaded_expire_description">Setup maximum size of downloaded items</string>
    <string name="pref_downloaded_expire_title">Podcast history size</string>
    <string name="pref_downloaded_dialog_title">History size</string>
    <string name="pref_notification_control">Notification Controls</string>
    <string name="pref_notification_control_description">Show small player in notification area</string>
    <string name="pref_max_new_items_title">Maximum Updated New Items</string>
    <string name="dialog_title_loading">Loading</string>
    <string name="dialog_message_loading">Loading channel...</string>
    <string name="dialog_title_add_sub">Add Channel</string>
    <string name="dialog_message_add_sub">Add channel from URL:</string>
    <string name="dialog_message_malformed_url">URL is invalid, please retry!</string>
    <string name="dialog_message_url_exist">URL exist, please retry!</string>
    <string name="dialog_title_del_sub">Delete Channel</string>
    <string name="list_message_empty_item">No Data Found</string>
    <string name="list_message_empty_subs">No channel, please add one...</string>
    <string name="fail">fail</string>
    <string name="success">success</string>
    <string name="network_fail">network fail</string>
    <string name="feed_format_error">Feed format error or cannot identify format.</string>
    <string name="no_new_items">No new items found</string>
    <string name="no_data_found">no data found</string>
    <string name="already_subscribed">The channel has been subscribed.</string>
    <string name="title_section3">Playlist</string>
    <string name="title_section2">Feed</string>
    <string name="title_section1">Subscriptions</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_swipe">SoundWaves</string>
    <string name="refresh">Refresh</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="forward">Jump 10 s</string>
    <string name="info">Info</string>
    <string name="download">Download</string>
    <string name="queue">Queue</string>
    <string name="menu_download_all">Download All</string>
    <string name="menu_clear_playlist">Clear Playlist</string>
    <string name="menu_import">Import OPML</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="http_client_name">SoundWaves</string>
    <string name="menu_add_podcast">Add Podcast</string>
     <string name="menu_sync">Sync</string>
     <string name="menu_search">Search</string>
    <string name="menu_play">Play</string>
    <string name="menu_pause">Pause</string>
    <string name="pref_feedback_title">Send anonymous feedback</string>
    <string name="pref_feedback_description">Send anonymous data about the app, such as crash reports, to the developer. </string>
    <string name="pref_cloud_support_title">Enable Cloud Support</string>
    <string name="pref_cloud_support_description">Cloud support will backup your data to the cloud and synchronize data between your devices</string>
    <string name="title_activity_notification_receiver">NotificationReceiverActivity</string>
    
        <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

</resources>