<menu xmlns:android="http://schemas.android.com/apk/res/android" >

        <item
        android:id="@+id/menu_control"
        android:icon="?attr/play_invert_icon"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/menu_play"/>
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/content_new"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/menu_add_podcast"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="200"
        android:title="@string/refresh">
    </item>

</menu>