<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <SeekBar
        android:id="@+id/progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_large" >

        <ImageButton
            android:id="@+id/play_toggle"
            style="@style/PlayerControlButtons"
            android:contentDescription="@string/play"
            android:src="?attr/play_icon" />

        <ImageButton
            style="@style/PlayerControlButtons"
            android:id="@+id/stop"
            android:src="?attr/stop_icon"
            android:contentDescription="@string/stop" />

        <ImageButton
            style="@style/PlayerControlButtons"
            android:id="@+id/info"	
            android:src="?attr/info_icon"
            android:contentDescription="@string/info" />

        <ImageButton
            style="@style/PlayerControlButtons"
            android:id="@+id/download"
            android:src="?attr/download_icon"
            android:contentDescription="@string/download" />

        <ImageButton
            style="@style/PlayerControlButtons"
            android:id="@+id/queue"
            android:src="?attr/queue_icon"
            android:contentDescription="@string/queue" />
    </LinearLayout>

</LinearLayout>